tests/posts/invalid/missing-title.markdown
; Title: Missing title

Tags: News, Slugs, PHP

Slug: missing-title

Date: 2014-06-10 00:00:00

Body:

# Heading

Text.
